--- a/pwa/index.html
+++ b/pwa/index.html
@@ -30,6 +30,9 @@
 <h1 style="color: green;">PWA</h1>
 <input type="text" id="push-data" />
 <button id="push">send push</button>
+<div>
+    <button id="local-push">local push</button>
+</div>
 <p>
     My test PWA
 </p>
